aula_7/api_hpa/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-aula-7
  name: app-aula-7
spec:
  ports:
    - port: 6000
      protocol: TCP
      targetPort: 5000
  selector:
    app: app-aula-7
  type: ClusterIP
