aula_7/api_hpa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-aula-7
spec:
  ingressClassName: traefik
  rules:
    - host: app-aula-7.com
      http:
        paths:
          - backend:
              service:
                name: app-aula-7
                port:
                  number: 6000
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
